added canon signature

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
       {
         "type": "shell",
         "label": "SML Run active file",
-        "command": "rlwrap sml ${file}",
+        "command": "rlwrap sml",
         "problemMatcher": [],
         "group": {
           "kind": "build",
